--- a/src/styles/HomeAbt.css
+++ b/src/styles/HomeAbt.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@700&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=Arsenal&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arsenal&display=swap');
 .homecar{
     /* display: flex; */
     /* justify-content: center; */
@@ -14,7 +15,8 @@
     background-color: rgb(249, 242, 233);
     border-radius: 10px;
     padding: 40px;
-    /* width: 60%; */
+    /* width: 90%; */
+    
     
 }
 .homabt{
@@ -23,11 +25,22 @@
     background-attachment: fixed;
     background-size: cover; */
     width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    /* align-items: center; */
 }
 .caras{
     /* background-color: aqua; */
     display: flex;
     align-items: center;
+    /* width: 90%; */
+}
+.carasimg {
+    width: 60%;
+    display: block;
+    margin: auto;
+
 }
 .text{
     /* width: 30vw; */
@@ -39,8 +52,8 @@
 }
 .matter{
     
-    /* font-family: 'Arsenal', sans-serif; */
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Arsenal', sans-serif;
+    /* font-family: 'Nunito', sans-serif; */
 }
 @media only screen and (max-width: 1200px){
     .text{
@@ -57,5 +70,8 @@
         display: flex;
         justify-content: center;
         /* height: 50vh; */
+    }
+    .carasimg{
+        width: 100%;
     }
 }
