--- a/src/styles/service.css
+++ b/src/styles/service.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arsenal&display=swap');
 .maindiv{
     display: flex;
     flex-wrap: wrap;
@@ -34,6 +35,7 @@
     align-items: center;
     justify-content: center;
     text-align: justify;
+    font-family: 'Arsenal', sans-serif;
    
 }
 
@@ -78,5 +80,5 @@
 .text1 p{
     font-size: 1.3rem;
     padding: 3vh;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Arsenal', sans-serif;
 }
